--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "a";
     /*中文字体*/
-    src: url(/fonts/STHeitiLight.ttc);
+    src: url(/fonts/STHeiti.ttf);
     font-display: swap;
 }
 
